# feup-cal-vaccine-router

./: CMakeLists.txt  LICENSE  README.md  main.cpp
Porto/: t07_tags_porto.txt
src/Algorithms/Clustering/: ClusteringAlgorithm.cpp  ClusteringAlgorithm.h  Kmeans.cpp  Kmeans.h  Naive.cpp  Naive.h  Point.cpp  Point.h
src/Algorithms/Connectivity/: Kosaraju.cpp  Kosaraju.h  SCCAlgorithm.cpp  SCCAlgorithm.h  Tarjan.cpp  Tarjan.h
src/Algorithms/MaxFlowMinCost/: FlowGraph.h
src/Algorithms/Reachability/: DepthFirstSearch.cpp  DepthFirstSearch.h
src/Algorithms/ShortestPath/: Astar.cpp  Astar.h  Dijkstra.cpp  Dijkstra.h  DijkstraBidirectional.cpp  DijkstraBidirectional.h  NodeWrapper.h  ShortestPathAlgorithm.cpp  ShortestPathAlgorithm.h
src/Algorithms/TravellingSalesmenProblem/: BellmanHeldKarp.cpp  BellmanHeldKarp.h  NearestNeighbour.cpp  NearestNeighbour.h  TSPAlgorithm.cpp  TSPAlgorithm.h
src/Algorithms/VehicleRoutingProblem/: BuildVRP.cpp  BuildVRP.h  CapacitatedNearestNeighbour.cpp  CapacitatedNearestNeighbour.h  ClarkeWright.cpp  ClarkeWright.h  Route.cpp  Route.h  VRPAlgorithm.cpp  VRPAlgorithm.h
src/DataStructures/: Graph.cpp  Graph.h  MutablePriorityQueue.h
src/File/: FileLoader.cpp  FileLoader.h
src/Menu/: Menu.cpp  Menu.h
src/vaccinerouter/: CostFunction.h  TimeAstarHeuristic.h  VaccineRouter.cpp  VaccineRouter.h
